--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spinners": "^0.10.6",
+    "react-typist": "^2.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
