--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "child_process": "^1.0.2",
+    "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
@@ -26,7 +27,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "client": "npm start",
+    "server": "node server",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "eslintConfig": {
     "extends": [
