--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "client": "npm start",
-    "server": "node server",
+    "server": "nodemon server",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "eslintConfig": {
